@@ -21,16 +21,38 @@ public class ClimaController {
     }
 
     @GetMapping("/clima/actual")
-    public ResponseEntity<Map<String, Object>> getClimaActual(@RequestParam String ciudad) {
+    public ResponseEntity<Map<String, Object>> getClimaActual(@RequestParam(required = false) String ciudad) {
         Map<String, Object> response = new HashMap<>();
         try {
-            if (ciudad == null || ciudad.isBlank()) {
-                response.put("error", "El parámetro 'ciudad' es obligatorio");
+            // Validación de parámetro 'ciudad'
+            if (ciudad == null || ciudad.trim().isEmpty()) {
+                response.put("error", "Por favor, especifique una ciudad válida.");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
             }
-            return ResponseEntity.ok(climaService.getClimaActual(ciudad));
+
+            // Consulta al servicio
+            Map<String, Object> climaData = climaService.getClimaActual(ciudad);
+            Map<String, Object> clima = (Map<String, Object>) climaData.get("clima");
+
+            // Añadir más datos disponibles
+            clima.put("viento_mph", climaData.get("wind_mph"));
+            clima.put("direccion_viento", climaData.get("wind_dir"));
+            clima.put("presion_mb", climaData.get("pressure_mb"));
+            clima.put("precipitacion_mm", climaData.get("precip_mm"));
+
+            response.put("clima", clima);
+            response.put("mensaje", "Condiciones climáticas actuales obtenidas correctamente");
+            return ResponseEntity.ok(response);
+        } catch (RuntimeException e) {
+            // Manejo de errores de la API externa (e.g., ciudad no encontrada)
+            if (e.getMessage().contains("400 Bad Request") || e.getMessage().contains("No matching location found")) {
+                response.put("error", "No se encontró la ciudad especificada. Verifique el nombre e intente de nuevo.");
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+            }
+            response.put("error", "Error al consultar las condiciones climáticas: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         } catch (Exception e) {
-            response.put("error", "Error al consultar clima actual: " + e.getMessage());
+            response.put("error", "Ocurrió un error interno en el servidor. Intente de nuevo más tarde.");
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
     }
